tested on signal-containing .tsm of slice

--- a/tsm_reader.ipynb
+++ b/tsm_reader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "b615fbc5",
    "metadata": {},
    "outputs": [
@@ -22,25 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "4eeb5b2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"test.tsm\"\n",
+    "filename = \"Untitled008.tsm\"\n",
     "width = 1024\n",
     "height = 320\n",
     "num_frames = 200\n",
     "\n",
     "file = open(filename, 'rb')\n",
     "header = file.read(2880)\n",
-    "\n",
-    "# alternative to try\n",
-    "# import struct\n",
-    "# print(struct.unpack('h', file.read(2)))  # 'h' is short int, i.e. int16\n",
-    "\n",
-    "# Numpy would need to be sure to skip header\n",
-    "# data = np.fromfile(file, dtype=np.int15)\n",
     "\n",
     "data = np.zeros((num_frames, height, width), dtype=np.int16)\n",
     "\n",
@@ -53,12 +46,13 @@
     "\n",
     "for i in range(height):\n",
     "    for j in range(width):\n",
-    "        dark_frame[i, j] = int.from_bytes(file.read(2), byteorder='little')\n"
+    "        dark_frame[i, j] = int.from_bytes(file.read(2), byteorder='little')\n",
+    "file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "8688319e",
    "metadata": {},
    "outputs": [
@@ -66,16 +60,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(200, 320, 1024) 380.18149407958987\n"
+      "(200, 320, 1024) 333.7440400695801\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x1fd5312f430>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(data.shape, np.average(data))\n",
     "plt.imshow(data[0,:,:])\n",
     "# plt.imshow(dark_frame)\n",
-    "\n",
-    "file.close()"
+    "\n"
    ]
   },
   {
